--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Pedro Ruan | Full Stack Developer</title>
+    <link rel="icon" href="fiveicon.png" type="image/x-icon">
 </head>
 
 <body class="bg-slate-900 text-white font-sans">
