--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 <body class="bg-slate-900 text-white font-sans">
 
     <section
-        class="min-h-screen flex flex-col justify-center px-8 lg:px-24 bg-gradient-to-br from-slate-900 via-purple-900/20 to-slate-900">
-        <div class="max-w-6xl mx-auto grid lg:grid-cols-2 gap-12 items-center">
-            <div>
-                <h1 class="text-5xl font-bold mb-4">Pedro Ruan M. Lima</h1>
-                <p class="text-xl text-slate-400 mb-8">Desenvolvedor Full Stack Sênior. Especialista em
+        class="min-h-screen flex flex-col justify-center px-4 lg:px-24 bg-gradient-to-br from-slate-900 via-purple-900/20 to-slate-900 py-12 lg:py-0">
+        <div class="max-w-6xl mx-auto grid lg:grid-cols-2 gap-8 lg:gap-12 items-center">
+            <div class="order-2 lg:order-1 text-center lg:text-left">
+                <h1 class="text-4xl lg:text-5xl font-bold mb-4">Pedro Ruan M. Lima</h1>
+                <p class="text-lg lg:text-xl text-slate-400 mb-8">Desenvolvedor Full Stack Sênior. Especialista em
                     construir sistemas de alta performance.</p>
                 <a href="https://www.linkedin.com/in/pedroruan"
-                    class="bg-cyan-500 hover:bg-cyan-600 text-slate-900 font-bold py-3 px-8 rounded-full transition">Entrar
+                    class="bg-cyan-500 hover:bg-cyan-600 text-slate-900 font-bold py-3 px-8 rounded-full transition inline-block">Entrar
                     em contato</a>
             </div>
-            <div class="flex justify-center">
+            <div class="flex justify-center order-1 lg:order-2">
                 <img src="foto.jpg" alt="Pedro Ruan"
-                    class="rounded-2xl border-4 border-cyan-500/30 shadow-2xl max-h-[500px]">
+                    class="rounded-2xl border-4 border-cyan-500/30 shadow-2xl max-h-[300px] lg:max-h-[500px] w-auto">
             </div>
         </div>
     </section>
 
-    <section class="py-24 px-8 lg:px-24 bg-slate-800/50">
+    <section class="py-16 lg:py-24 px-4 lg:px-24 bg-slate-800/50">
         <div class="max-w-4xl mx-auto text-center">
-            <h2 class="text-3xl font-bold mb-12">Expertise Técnica</h2>
+            <h2 class="text-2xl lg:text-3xl font-bold mb-8 lg:mb-12">Expertise Técnica</h2>
             <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-sm">
                 <div class="p-4 border border-slate-700 rounded-lg">PHP / Laravel</div>
                 <div class="p-4 border border-slate-700 rounded-lg">Ruby on Rails</div>
