--- a/index.html
+++ b/index.html
@@ -2,71 +2,106 @@
 <html lang="pt-br">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Pedro Ruan | Full Stack Developer</title>
     <link rel="icon" href="fiveicon.png" type="image/x-icon">
+    <style>
+        .glass {
+            background: rgba(30, 41, 59, 0.7);
+            backdrop-filter: blur(10px);
+        }
+    </style>
 </head>
 
-<body class="bg-slate-900 text-white font-sans">
+<body class="bg-slate-900 text-white font-sans selection:bg-cyan-500/30">
 
     <section
-        class="min-h-screen flex flex-col justify-center px-4 lg:px-24 bg-gradient-to-br from-slate-900 via-purple-900/20 to-slate-900 py-12 lg:py-0">
-        <div class="max-w-6xl mx-auto grid lg:grid-cols-2 gap-8 lg:gap-12 items-center">
-            <div class="order-2 lg:order-1 text-center lg:text-left">
-                <h1 class="text-4xl lg:text-5xl font-bold mb-4">Pedro Ruan M. Lima</h1>
-                <p class="text-lg lg:text-xl text-slate-400 mb-8">Desenvolvedor Full Stack Sênior. Especialista em
-                    construir sistemas de alta performance.</p>
-                <a href="https://www.linkedin.com/in/pedroruan"
-                    class="bg-cyan-500 hover:bg-cyan-600 text-slate-900 font-bold py-3 px-8 rounded-full transition inline-block">Entrar
-                    em contato</a>
+        class="min-h-screen flex items-center px-6 lg:px-24 bg-[radial-gradient(circle_at_top_right,_var(--tw-gradient-stops))] from-purple-900/20 via-slate-900 to-slate-900 py-12 lg:py-0">
+        <div class="max-w-6xl mx-auto grid lg:grid-cols-2 gap-12 items-center">
+
+            <div class="flex justify-center order-1 lg:order-2 w-full">
+                <div class="relative group">
+                    <div
+                        class="absolute -inset-1 bg-gradient-to-r from-cyan-500 to-purple-600 rounded-2xl blur opacity-25 group-hover:opacity-50 transition duration-1000">
+                    </div>
+                    <img src="foto.jpg" alt="Pedro Ruan"
+                        class="relative rounded-2xl border border-white/10 shadow-2xl w-full max-w-[320px] lg:max-w-[450px] aspect-square object-cover object-top">
+                </div>
             </div>
-            <div class="flex justify-center order-1 lg:order-2">
-                <img src="foto.jpg" alt="Pedro Ruan"
-                    class="rounded-2xl border-4 border-cyan-500/30 shadow-2xl max-h-[300px] lg:max-h-[500px] w-auto">
+
+            <div class="order-2 lg:order-1 text-center lg:text-left">
+
+                <h1
+                    class="text-4xl md:text-5xl lg:text-7xl font-extrabold mb-6 bg-clip-text text-transparent bg-gradient-to-r from-white to-slate-400 leading-[1.1]">
+                    Pedro Ruan M. Lima
+                </h1>
+                <p class="text-lg md:text-xl lg:text-2xl text-slate-400 mb-10 leading-relaxed max-w-xl mx-auto lg:mx-0">
+                    Desenvolvedor Full Stack Sênior. Especialista em arquiteturas escaláveis e sistemas de alta
+                    performance.
+                </p>
+                <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start">
+                    <a href="https://www.linkedin.com/in/pedroruan"
+                        class="bg-cyan-500 hover:bg-cyan-400 text-slate-900 font-bold py-4 px-8 rounded-xl transition-all shadow-lg shadow-cyan-500/20 active:scale-95 text-center">
+                        Entrar em contato
+                    </a>
+                </div>
             </div>
         </div>
     </section>
 
-    <section class="py-16 lg:py-24 px-4 lg:px-24 bg-slate-800/50">
-        <div class="max-w-4xl mx-auto text-center">
-            <h2 class="text-2xl lg:text-3xl font-bold mb-8 lg:mb-12">Expertise Técnica</h2>
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-sm">
-                <div class="p-4 border border-slate-700 rounded-lg">PHP / Laravel</div>
-                <div class="p-4 border border-slate-700 rounded-lg">Ruby on Rails</div>
-                <div class="p-4 border border-slate-700 rounded-lg">React / Vue.js</div>
-                <div class="p-4 border border-slate-700 rounded-lg">Google Cloud</div>
+    <section class="py-20 lg:py-32 px-6 lg:px-24 bg-slate-950/50 relative overflow-hidden">
+        <div class="max-w-4xl mx-auto relative z-10">
+            <div class="text-center mb-16">
+                <h2 class="text-3xl lg:text-4xl font-bold mb-4">Expertise Técnica</h2>
+                <div class="h-1 w-20 bg-cyan-500 mx-auto rounded-full"></div>
             </div>
 
-            <div class="mt-20 border-t border-slate-700 pt-10 text-slate-500">
-                <p class="mt-4">contato@pedroruan.com</p>
-                <div class="flex justify-center gap-6 mt-6">
-                    <!-- LinkedIn -->
-                    <a href="https://www.linkedin.com/in/pedroruan" target="_blank"
-                        class="hover:text-cyan-500 transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                            fill="currentColor" class="w-6 h-6">
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-4 lg:gap-6">
+                <div
+                    class="glass p-6 border border-white/5 rounded-2xl text-center hover:border-cyan-500/50 transition-colors">
+                    <p class="font-semibold text-cyan-400 mb-1">Backend</p>
+                    <p class="text-sm text-slate-300">PHP / Laravel </p>
+                </div>
+                <div
+                    class="glass p-6 border border-white/5 rounded-2xl text-center hover:border-cyan-500/50 transition-colors">
+                    <p class="font-semibold text-cyan-400 mb-1">Backend</p>
+                    <p class="text-sm text-slate-300">Ruby on Rails </p>
+                </div>
+                <div
+                    class="glass p-6 border border-white/5 rounded-2xl text-center hover:border-cyan-500/50 transition-colors">
+                    <p class="font-semibold text-cyan-400 mb-1">Frontend</p>
+                    <p class="text-sm text-slate-300">React / Vue.js </p>
+                </div>
+                <div
+                    class="glass p-6 border border-white/5 rounded-2xl text-center hover:border-cyan-500/50 transition-colors">
+                    <p class="font-semibold text-cyan-400 mb-1">Cloud</p>
+                    <p class="text-sm text-slate-300">Google Cloud </p>
+                </div>
+            </div>
+
+            <div class="mt-24 pt-12 border-t border-white/5 text-center">
+                <p class="text-slate-500 font-mono text-sm mb-8">contato@pedroruan.com</p>
+
+                <div class="flex justify-center gap-8">
+                    <a href="https://www.linkedin.com/in/pedroruan"
+                        class="text-slate-400 hover:text-cyan-500 transition-transform hover:-translate-y-1">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                             <path
                                 d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
                         </svg>
                     </a>
-                    <!-- Email -->
-                    <a href="mailto:contato@pedroruan.com" class="hover:text-cyan-500 transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                            fill="currentColor" class="w-6 h-6">
+                    <a href="mailto:pruan199@gmail.com"
+                        class="text-slate-400 hover:text-cyan-500 transition-transform hover:-translate-y-1">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                             <path
                                 d="M0 3v18h24v-18h-24zm21.518 2l-9.518 7.713-9.518-7.713h19.036zm-19.518 14v-11.817l10 8.104 10-8.104v11.817h-20z" />
                         </svg>
                     </a>
-                    <!-- Instagram -->
-                    <a href="https://instagram.com/pedroruan.lima" target="_blank"
-                        class="hover:text-cyan-500 transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                            fill="currentColor" class="w-6 h-6">
-                            <path
-                                d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
-                        </svg>
-                    </a>
                 </div>
+                <p class="mt-12 text-[10px] text-slate-700 uppercase tracking-[0.2em]">© 2025 Pedro Ruan - Full Stack
+                    Sênior</p>
             </div>
         </div>
     </section>
